--- a/web/assets/scss/components/_sidebar.scss
+++ b/web/assets/scss/components/_sidebar.scss
@@ -27,9 +27,6 @@
       position: absolute;
       background: url('../svgs/icon-right-arrow-red.svg') no-repeat;
       background-size: contain;
-      @include media-lg {
-        // display: none;
-      }
     }
   }
 
