--- a/web/assets/scss/helpers/_variables.scss
+++ b/web/assets/scss/helpers/_variables.scss
@@ -42,6 +42,6 @@ $breakpoint-meta: 800px;
 $sidebar-max-width: 288px;
 
 $breakpoint-sm: 480px;
-$breakpoint-md: 750px;
+$breakpoint-md: 900px;
 $breakpoint-lg: 1200px;
 $breakpoint-xl: 1440px;
